--- a/01 Feb' 23 Project - HTML & CSS/index.html
+++ b/01 Feb' 23 Project - HTML & CSS/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
     <!-- Css -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <!-- Google Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
