Added styles to  Footer section

--- a/11 Feb Assignment 6/Beats/index.html
+++ b/11 Feb Assignment 6/Beats/index.html
@@ -156,8 +156,7 @@
     </section>
     <!-- Footer Section -->
     <footer>
-        <img src="./photos/beatsLogo.png" alt="beats-logo">
-        <div class="footer-boxes">
+            <img src="./photos/beatsLogo.png" alt="beats-logo">
             <ul>
                 <li>Products</li>
                 <li>Headphones</li>
@@ -174,7 +173,7 @@
             </ul>
             <div class="subscribe">
                 <div class="email-field">
-                    <input type="email" name="Email" placeholder="Email" id="">
+                    <input type="email" name="Email" placeholder="Email" id="mail">
                     <div class="subscribe-btn">
                         <img src="./icons/rightArrow.png" alt="">
                         <p>Subscribe</p>
@@ -187,9 +186,8 @@
                     <img src="./icons/linkedin.png" alt="">
                 </div>
             </div>
-        </div>
-            <img src="./Icons/upArrow.png" alt="">
-    </footer>
+            <img src="./Icons/upArrow.png" alt="up-arrow">
+        </footer>
 </body>
 
 </html>
