--- a/11 Feb Assignment 6/Real Estate/index.html
+++ b/11 Feb Assignment 6/Real Estate/index.html
@@ -1,301 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Real State</title>
 
-    <!-- adding the font family -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Real Estate</title>
+    <!-- Css -->
+    <link rel="stylesheet" href="./style.css">
+    <!-- Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet" />
+</head>
 
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-
-  <body>
+<body>
+    <!-- Header  -->
     <header>
-      <!-- navbar -->
-      <nav>
-        <img src="./Icons/Logo.svg" alt="logo image" />
-        <!-- nav links -->
-        <ul>
-          <li><a href="#">Location</a></li>
-          <li><a href="#">Blogs</a></li>
-          <li><a href="#">Testimonial</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <hr />
 
-      <div>
-        <h1>Home That Makes <br />You Living Life!</h1>
-        <p>
-          Are you looking for amazing Real estate? Don't worry! we got it for
-          you
-        </p>
-        <button>Learn More</button>
-      </div>
+        <!-- Navigation  -->
+        <nav>
+            <img src="./icons/Logo.svg" alt="logo-icon1">
+            <ul>
+                <li><a href="#">Location</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Testimonial</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <hr>
+        <div class="header-main">
+            <h1>Home That Makes
+                You Living Life!</h1>
+            <p>Are you looking for amazing Real estate? Don't worry! we got it for you</p>
+            <button>Learn More</button>
+        </div>
     </header>
-
-    <!-- multiple logos section -->
-    <section class="my-logos">
-      <img src="./Icons/logoName.svg" alt="named logo" />
-      <img src="./Icons/logoName.svg" alt="named logo" />
-      <img src="./Icons/logoName.svg" alt="named logo" />
-      <img src="./Icons/logoName.svg" alt="named logo" />
-      <img src="./Icons/logoName.svg" alt="named logo" />
+    <!-- Logo image section  -->
+    <section class="logo-images">
+        <img src="./Icons/logoName.svg" alt="logo-name-img">
+        <img src="./Icons/logoName.svg" alt="logo-name-img">
+        <img src="./Icons/logoName.svg" alt="logo-name-img">
+        <img src="./Icons/logoName.svg" alt="logo-name-img">
+        <img src="./Icons/logoName.svg" alt="logo-name-img">
     </section>
-
-    <!-- section for displaying all our real state properties in a card -->
-    <section class="cards-wrapper-section">
-      <h1>Our Best Estate, <br />are Modern!</h1>
-
-      <!-- creating a main div to wrap all the cards -->
-      <div class="cards-wrapper">
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage1.png" alt="cardImage1" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+    <!-- Cards Section  -->
+    <section class="cards-section">
+        <h1>Our Best Estate,
+            <br>
+            are Modern!
+        </h1>
+        <div class="cards-container">
+            <div class="card">
+                <img src="./Photos/cardImage1.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage2.png" alt="cardImage2" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage2.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage3.png" alt="cardImage3" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage3.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage4.png" alt="cardImage4" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage4.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage5.png" alt="cardImage5" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage5.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage6.png" alt="cardImage6" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage6.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage7.png" alt="cardImage7" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage7.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage8.png" alt="cardImage8" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage8.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
-        </div>
-
-        <!-- creating estate property card -->
-        <div class="card">
-          <img src="./Photos/cardImage9.png" alt="cardImage9" />
-          <!-- for displaying the property details -->
-          <div class="card-box">
-            <!-- displaying the price and property name -->
-            <div>
-              <h3>Mixtownia</h3>
-              <p>$205,500</p>
+            <div class="card">
+                <img src="./Photos/cardImage9.png" alt="">
+                <div class="card-details">
+                    <div>
+                        <h1>Mixtownia</h1>
+                        <p>$205,500</p>
+                    </div>
+                    <button>Detail</button>
+                </div>
             </div>
-            <!-- button for more details -->
-            <button>Detail</button>
-          </div>
         </div>
-      </div>
     </section>
-
-    <!-- section for displaying first feature -->
-    <section class="features-section first-feature-section">
-      <!-- for displaying the images -->
-      <div>
-        <img src="./Icons/featureImageBg1.svg" alt="image background" />
-        <img src="./Photos/featuresImage1.png" alt="feature image 1" />
-      </div>
-
-      <!-- for displaying the written content -->
-      <div>
-        <h1>Modern, Trendy, Affordable</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit, Dolorem quo
-          rem officia nisi exercitationem porro?
-        </p>
-        <button>Early Bird Book</button>
-      </div>
+    <!-- Features Section  -->
+    <section class="features-section first-feature">
+        <div>
+            <img src="./Icons/featureImageBg1.svg" alt="">
+            <img src="./Photos/featuresImage1.png" alt="">
+        </div>
+        <div>
+            <h1>
+                Modern, Trendy, Affordable</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, Dolorem quo rem officia nisi exercitationem
+                porro?</p>
+            <button>Early Bird Book</button>
+        </div>
     </section>
-
-    <!-- section for displaying second feature -->
-    <section class="features-section second-feature-section">
-      <!-- for displaying the written content -->
-      <div>
-        <h1>Unique House for Long Term!</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quo
-          rem officia nisi exercitationem porro?
-        </p>
-        <button>Early Bird Book</button>
-      </div>
-
-      <!-- for displaying the images -->
-      <div>
-        <img src="./Icons/featureImageBg2.png" alt="image background" />
-        <img src="./Photos/featuresImage2.png" alt="feature image 2" />
-      </div>
+    <section class="features-section second-feature">
+        <div>
+            <h1>Unique House for Long Term!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, Dolorem quo rem officia nisi exercitationem
+                porro?</p>
+            <button>Early Bird Book</button>
+        </div>
+        <div>
+            <img src="./Icons/featureImageBg2.png" alt="">
+            <img src="./Photos/featuresImage1.png" alt="">
+        </div>
     </section>
-
-    <!-- section for creating the newsletter -->
+    <!-- Newsletter Section  -->
     <section class="newsletter">
-      <h1>Subscribe to Our Newsletter <br> For Weekly Article Update.</h1>
-      <p>
-        We have real estate-related blog so we can share our thoughts and
-        rutinity in our blog that updated weekly. We will not spam you, we
-        promise.
-      </p>
-
-      <!-- for taking user email -->
-      <form>
-        <div>
-          <img src="./Icons/mail.png" alt="mail">
-          <input type="text" placeholder="Enter tour e-mail address"/>
+        <h1>Subscribe to Our Newsletter
+            For Weekly Article Update.</h1>
+        <p>We have real estate-related blog so we can share our thoughts and rutinity in our blog that updated weekly.
+            We will not spam you, we promise.</p>
+        <div class="mail">
+            <div>
+                <img src="./icons/mail.png" alt="mail-icon">
+                <input type="email" name="Email" id="email-input" placeholder="Enter your e-mail address">
+            </div>
+            <button>Subscribe</button>
         </div>
-        <button>Subscribe</button>
-      </form>
     </section>
-
-    <!-- creating the footer area -->
-    <footer>
-      <div>
-        <img src="./Icons/Logo.svg" alt="logo" />
-        <!-- for social media icons -->
-        <div>
-          <img src="./Icons/facebook.png" alt="facebook icon" />
-          <img src="./Icons/twitter.png" alt="twitter icon" />
-          <img src="./Icons/instagram.png" alt="instagram icon" />
+    <!-- Footer  -->
+    <Footer>
+        <div class="footer-left">
+            <img src="./Icons/Logo.svg" alt="logo-icon2">
+            <div class="social">
+                <img src="./icons/facebook.png" alt="facebook-icon">
+                <img src="./icons/twitter.png" alt="twitter-icon">
+                <img src="./icons/instagram.png" alt="instagram-icon">
+            </div>
+            <p>2022 Award winning Real estate and Lorem ipsum dolor sit amet</p>
         </div>
-        <p>2022 Award winning Real estate and Lorem ipsum dolor sit amet</p>
-      </div>
-
-      <!-- for all different pages links -->
-      <div class="footer-links">
-        <div class="footer-links-content">
-          <ul>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">America</a></li>
-            <li><a href="#">Asia</a></li>
-            <li><a href="#">Europe</a></li>
-            <li><a href="#">Africa</a></li>
-          </ul>
+        <div class="footer-right">
+            <ul>
+                <li><a href="#">Location</a></li>
+                <li><a href="#">America</a></li>
+                <li><a href="#">Asia</a></li>
+                <li><a href="#">Europe</a></li>
+                <li><a href="#">Africa</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Teams</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Legals</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Disclaimer</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Company</a></li>
+            </ul>
         </div>
+    </Footer>
+</body>
 
-        <div class="footer-links-content">
-          <ul>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Teams</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">FAQ</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-links-content">
-          <ul>
-            <li><a href="#">Legals</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Disclaimer</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Company</a></li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-  </body>
 </html>
